--- a/5.6.18-fpm/Dockerfile
+++ b/5.6.18-fpm/Dockerfile
@@ -6,7 +6,7 @@ RUN set -ex \
 	&& apt-get install -y libapache2-mod-php5 \
 	&& docker-php-ext-install mysql \
 	&& docker-php-ext-install mysqli \
-	&& docker-php-ext-install mbstring json session fileinfo exif gettext
+	&& docker-php-ext-install bcmath bz2 calendar ctype date dba dom ereg exif fileinfo filter ftp gettext hash iconv json libxml mbstring openssl pcre posix session shmop soap sockets standard sysvmsg sysvsem sysvshm tokenizer wddx xml xmlreader xmlwriter zip zlib
 
 EXPOSE 9000
 CMD ["php-fpm"]
