--- a/5.6.18-cli/Dockerfile
+++ b/5.6.18-cli/Dockerfile
@@ -6,6 +6,6 @@ RUN set -ex \
 	&& apt-get install -y libapache2-mod-php5 \
 	&& docker-php-ext-install mysql \
 	&& docker-php-ext-install mysqli \
-	&& docker-php-ext-install bcmath bz2 calendar ctype date dba dom ereg exif fileinfo filter ftp gettext hash iconv json libxml mbstring openssl pcre posix session shmop soap sockets standard sysvmsg sysvsem sysvshm tokenizer wddx xml xmlreader xmlwriter zip zlib
+	&& docker-php-ext-install mbstring json session fileinfo exif gettext sockets
 
 CMD ["php", "-a"]
