--- a/5.6.18-cli/Dockerfile
+++ b/5.6.18-cli/Dockerfile
@@ -3,10 +3,13 @@ FROM php:5.6.18-cli
 RUN set -ex \
 	&& apt-get update \
 	&& apt-get install -y php5-mysql \
+	&& apt-get install -y php5-gd libfreetype6-dev libjpeg62-turbo-dev libpng12-dev \
 	&& apt-get install -y libapache2-mod-php5 \
 	&& docker-php-ext-install mysql \
 	&& docker-php-ext-install mysqli \
 	&& docker-php-ext-install pdo pdo_mysql \
+  && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+  && docker-php-ext-install -j$(nproc) gd \
 	&& docker-php-ext-install mbstring json session fileinfo exif gettext sockets
 
 CMD ["php", "-a"]
